--- a/games/element.html
+++ b/games/element.html
@@ -135,7 +135,9 @@
         <div align="center">
                 <canvas id="canvas" width="1000px" height="700px"></canvas>
                 <!-- <p id="stats" style="color: cyan; font-size: 30px;">hi</p> -->
-                <button id="testBtn" style="background: lime; color: cyan; font-size: 30px;">hi</button>
+                <button id="updateBtn" style="background: lime; color: black; font-size: 30px;">update location</button>
+                <button id="connectBtn" style="background: magenta; font-size: 30px">connect</button>
+                <button id="disconnectBtn" style="background: red; font-size: 30px">disconnect</button>
                 <div class="joystickContainer">
                         <canvas id="joystick"></canvas>
                 </div>
