--- a/games/element.html
+++ b/games/element.html
@@ -133,8 +133,7 @@
 <body id="bod" onload="start();">
 
         <div align="center">
-                <canvas id="canvas" width="1000px" height="700px"></canvas>
-                <!-- <p id="stats" style="color: cyan; font-size: 30px;">hi</p> -->
+                <canvas id="canvas" width="1000px" height="700px"></canvas>                
                 <button id="updateBtn" style="background: lime; color: black; font-size: 30px;">update location</button>
                 <button id="connectBtn" style="background: magenta; font-size: 30px">connect</button>
                 <button id="disconnectBtn" style="background: red; font-size: 30px">disconnect</button>
@@ -160,6 +159,7 @@
                         <p class="bbtnb">B</p>
                 </div>
         </div>
+        <p id="test" style="color: cyan; font-size: 30px;">test</p>
         <!-- jQuery -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
