--- a/games/index.html
+++ b/games/index.html
@@ -35,13 +35,13 @@
         }
 
         .header-background {
-            background-image: url('games/images/background.png');
+            background-image: url('images/background.png');
             height: 100%;
             width: 100%;
         }
 
         .background {
-            background-image: url('games/images/background.png');
+            background-image: url('images/background.png');
             height: 100%;
             width: 100%;
         }
@@ -237,7 +237,7 @@
     </style>
 </head>
 
-<body style="font-family: verdana; background: url(games/images/background.png);">
+<body style="font-family: verdana; background: url(images/background.png);">
     <div id="sidenav" class="sidenav">
         <a href="#about">About</a>
         <a href="#services">Services</a>
@@ -329,31 +329,31 @@
         var gamelist = [
             {
                 name: 'Boss Dodge',
-                link: './games/bossdodge.html'
+                link: 'bossdodge.html'
             },
             {
                 name: 'Boss Raid',
-                link: './games/bossraid.html',
+                link: 'bossraid.html',
             },
             {
                 name: 'Cheers Master',
-                link: './games/cheersmaster.html'
+                link: 'cheersmaster.html'
             },
             {
                 name: 'Element',
-                link: './games/element.html'
+                link: 'element.html'
             },
             {
                 name: 'Flappy Square',
-                link: './games/flappysquare.html'
+                link: 'flappysquare.html'
             },
             {
                 name: 'Ghost Summoner',
-                link: './games/ghostSummoner.html'
+                link: 'ghostSummoner.html'
             },
             {
                 name: 'Collecter',
-                link: './games/treasure.html'
+                link: 'treasure.html'
             },
         ]
 
@@ -381,7 +381,7 @@
                         // )
                         .append(
                             $('<img>')
-                                .attr('src', 'games/images/mainbackground.png')
+                                .attr('src', 'images/mainbackground.png')
                                 .attr('style', 'width: 100%; height: 69%;')
                                 .attr('onclick', 'console.log("hi")')
                         )
