--- a/public/element.html
+++ b/public/element.html
@@ -169,6 +169,17 @@
         <script src="/public/scripts/element/joystick.js"></script>
         <script src="/public/scripts/element/conjure.js"></script>
         <script src="/public/scripts/element/events.js"></script>
+        <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+        <script>
+                var socket = io();
+                socket.emit('happy', {
+                        reason: 'its my birthday'
+                })
+
+                socket.on('message', function(data) {
+                        console.log(data.msg)
+                })
+        </script>
 </body>
 
 </html>
