--- a/public/element.html
+++ b/public/element.html
@@ -326,9 +326,12 @@
                                 for(var i = 0; i < data.length; i++) {
                                         var wallx = data[i].x
                                         var wally = data[i].y;
+                                        // firewall.update();
                                         if(data[i].controller === 1) {
                                                 // console.log(data[i].x)                                                
                                                 // console.log(data[i].controller)
+                                                firewallup = true;
+                                                firewall.update();
                                                 ctx.fillStyle = 'white';
                                                 ctx.drawImage(fireplayer, data[i].x, data[i].y, 100, 100);
                                                 ctx.fillText('Player left', data[i].x, data[i].y - 10)
