--- a/public/index.html
+++ b/public/index.html
@@ -239,10 +239,10 @@
 
 <body style="font-family: verdana; background: url(/public/images/background.png);">
     <div id="sidenav" class="sidenav">
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
-        <a href="#clients">Clients</a>
-        <a href="#contact">Contact</a>
+        <a href="/">Home</a>
+        <a href="/store">Store</a>
+        <a href="https://pxgraham.github.io/Portfolio" target="_blank">Contact</a>
+        <a href="/privacy">Privacy Policy</a>
     </div>
 
     
@@ -264,7 +264,7 @@
                     </li>
                         <div class="logocontainer">
                             <div class="logo">
-                                SLEYSIN
+                                <a href="sleysin.com">SLEYSIN</a>
                             </div>
                             <hr />
                         </div>
